2006-08-25  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/Mutils.c (dup_mMatrix_as_dgeMatrix): added all subclasses of
	subclasses of "ddenseMatrix"
	* src/init.c et al: outcomment dtrM*_as_dge* and dsyM*_as_dge*_
	* R/ddenseMatrix.R et al: setAs("ddenseMatrix", "dgeMatrix", ..)
	instead of half dozen specialized ones.

2006-08-25  Douglas Bates  <bates@R-project.org>

	* R/lmer.R (qqmath method): Bug fix provided by Emmanuel Tillard
	<tillard@cirad.fr> - ordering standard errors to match effects.

2006-08-24  Douglas Bates  <bates@R-project.org>

	* src/lsCMatrix.c (lsCMatrix_trans): Remove lsCMatrix_chol based
	on R_ldl.
	* R/lCholCMatrix.R,
	src/[dl]CholCMatrix.[ch],R_ldl.[ch],Metis_utils.[ch]: removed
	* src/dsCMatrix.c (dsCMatrix_to_dgTMatrix): use CHOLMOD
	* many files in ./R and ./src: Use more general version of
	dup_mMatrix_as_dgeMatrix to simplify method definitions.
	* src/Mutils.c (dup_mMatrix_as_dgeMatrix): Add ddiMatrix,
	dtpMatrix, dspMatrix and dppMatrix conversions.


2006-08-23  Douglas Bates  <bates@R-project.org>

	* R/AllClass.R,lCholCMatrix.R,src/SOURCES_C.mkf,init.c,NAMESPACE:
	Remove classes lCholCMatrix and dCholCMatrix based on R_ldl code.
	* src/dgeMatrix.c: Ensure 'factors' slot exists in result of
	dgeMatrix_crossprod (may need to do this in other places).
	* R/AllGeneric.R,dsCMatrix.R, src/dscMatrix.[ch]: Add Cholesky
	generic and method for dsCMatrix.  Use CHOLMOD for chol().

2006-08-22  Douglas Bates  <bates@R-project.org>

	* src/Mutils.c (dup_mMatrix_as_dgeMatrix): updated for general
	types of classed Matrices, matrices or numeric or logical vectors.
	* src/init.c: register dup_mMatrix_as_dgeMatrix for coercions.
	* src/chm_common.c,Mutils.h (as_cholmod_factor): Move check_class
	to Mutils.h (as an inline) and change name to Matrix_check_class;
	fixes in as_cholmod_factor and chm_factor_to_SEXP.
	* src/dsCMatrix.[ch]: Use CHOLMOD for dsCMatrix_chol and
	dsCMatrix_matrix_solve.  Comment out vestigial functions.